--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   </style>
 </head>
 <body>
+  <h5>Level: <div id="level">1</div></h5>
   <canvas id="gameCanvas" width="800" height="600"></canvas>
   <script src="client.js"></script>
 </body>
