health in stats

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,10 @@
       <div class="stats-label">Kills</div>
       <div id="kills" class="stats-value">0</div>
     </div>
+    <div class="stats-item">
+      <div class="stats-label">Health</div>
+      <div id="health" class="stats-value">100</div>
+    </div>
   </div>
   <canvas id="gameCanvas" width="800" height="600"></canvas>
   <script src="client.js"></script>
