--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
   </style>
 </head>
 <body>
+  <a href="https://github.com/JoshCap20/websocket-world-of-tanks" target="_blank">
+  <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub">
+  </a>
   <div class="stats-bar">
     <div class="stats-item">
       <div class="stats-label">Level</div>
