fix annoying banner github

--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,12 @@
 </head>
 
 <body>
-  <a href="https://github.com/JoshCap20/websocket-world-of-tanks" target="_blank">
-    <img style="position: absolute; top: 0; right: 0; border: 0;"
-      src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub">
-  </a>
   <div class="stats-bar">
+    <a href="https://github.com/JoshCap20/websocket-world-of-tanks" target="_blank" class="stats-item">
+      <div class="stats-value">
+        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="24" height="24" />
+      </div>
+    </a>
     <div class="stats-item">
       <div class="stats-label">Level</div>
       <div id="level" class="stats-value">1</div>
