--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,15 @@
 </head>
 
 <body>
+  <form id="tankTypeForm">
+    <label for="tankType">Select a tank type:</label>
+    <select name="tankType" id="tankType">
+      <option value="light">Light</option>
+      <option value="medium">Medium</option>
+      <option value="heavy">Heavy</option>
+    </select>
+    <button type="submit">Start Game</button>
+  </form>
   <div class="stats-bar">
     <a href="https://github.com/JoshCap20/websocket-multiplayer-tank-game" target="_blank" class="stats-item">
       <div class="stats-value">
