--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
   <div class="popup" id="popup">
     <div class="popup-content">
       <h2>Welcome to the Tank Game</h2>
+      <img src="favicon.png" width="64" height="64" />
+      
       <p>Select your tank and start playing!</p>
+      <p>Use the arrow keys to move your tank and the space bar to shoot.</p>
       <form id="tankTypeForm">
         <label for="tankType">Select a tank type:</label>
         <select name="tankType" id="tankType">
@@ -20,6 +23,7 @@
           <option value="medium">Medium</option>
           <option value="heavy">Heavy</option>
         </select>
+        <br>
         <button type="submit">Start Game</button>
       </form>
     </div>
