super heavy added

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
           <option value="light">Light</option>
           <option value="medium">Medium</option>
           <option value="heavy">Heavy</option>
+          <option value="super-heavy">Super Heavy</option>
         </select>
         <br>
         <button type="submit">Start Game</button>
