add mobile support

--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,15 @@ Base Damage: 30 (each bullet does 5 damage, 6 bullets per shot)</pre>
     </div>
   </div>
   <canvas id="gameCanvas" width="800" height="600"></canvas>
+  
+  <!-- Joystick Container -->
+  <div id="joystickContainer" class="joystick-container">
+    <div id="joystick" class="joystick"></div>
+  </div>
+
+  <!-- Fire Button -->
+  <button id="fireButton" class="fire-button">Fire</button>
+
   <script src="client.js"></script>
 </body>
 
